Java 9 compatibility